--- a/index.html
+++ b/index.html
@@ -13,26 +13,20 @@
 	
 	<main>
 		<section>
-			<section class="grid">
-				<div id="col1">
-					<div class="row1cool1"></div>
-					<div class="row2col1"></div>
-					<div class="row3col1"></div>
+			
+				<div class="board">
+					<div></div>
+					<div></div>
+					<div></div>
+					<div></div>
+					<div></div>
+					<div></div>
+					<div></div>
+					<div></div>
+					<div></div>
 				</div>
 
-				<div id="col2">
-					<div class="row1col2"></div>
-					<div class="row2col2"></div>
-					<div class="row3col2"></div>
-				</div>
-
-				<div id="col3">
-					<div class="row1col3"></div>
-					1<div class="row2col3"></div>
-					<div class="row3col3"></div>
-				</div>
-
-			</section>
+			
 		</section>
 		
 	</main>
