--- a/index.html
+++ b/index.html
@@ -6,30 +6,26 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link rel="stylesheet" href="./style.css">
-	<script src="./tictac.js"></script>
+	<script src="./tictac.js" defer></script>
 </head>
 <body>
-	<header> <h1>Tic Tac Toe Game</h1></header>
-	
+	<header>
+		<h1>Tic Tac Toe Game</h1>
+	</header>
 	<main>
 		<section>
-			
-				<div class="board">
-					<div></div>
-					<div></div>
-					<div></div>
-					<div></div>
-					<div></div>
-					<div></div>
-					<div></div>
-					<div></div>
-					<div></div>
-				</div>
-        
-				
+			<div class="board">
+				<div id="1"></div>
+				<div id="2"></div>
+				<div id="3"></div>
+				<div id="4"></div>
+				<div id="5"></div>
+				<div id="6"></div>
+				<div id="7"></div>
+				<div id="8"></div>
+				<div id="9"></div>
+			</div>
 		</section>
-		
 	</main>
-
 </body>
 </html>
