--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 	<main>
 		<section>
 			<div class="board">
-				<div id="1"></div>
-				<div id="2"></div>
-				<div id="3"></div>
-				<div id="4"></div>
-				<div id="5"></div>
-				<div id="6"></div>
-				<div id="7"></div>
-				<div id="8"></div>
-				<div id="9"></div>
+				<div id="box1"></div>
+				<div id="box2"></div>
+				<div id="box3"></div>
+				<div id="box4"></div>
+				<div id="box5"></div>
+				<div id="box6"></div>
+				<div id="box7"></div>
+				<div id="box8"></div>
+				<div id="box9"></div>
 			</div>
 		</section>
 	</main>
