--- a/index.html
+++ b/index.html
@@ -14,17 +14,21 @@
 	</header>
 	<main>
 		<section>
-			<div class="board">
-				<div id="box1"></div>
-				<div id="box2"></div>
-				<div id="box3"></div>
-				<div id="box4"></div>
-				<div id="box5"></div>
-				<div id="box6"></div>
-				<div id="box7"></div>
-				<div id="box8"></div>
-				<div id="box9"></div>
-			</div>
+				<div id="parentBox">
+					<div id="boxes" class="board">
+						<div id="box1"></div>
+						<div id="box2"></div>
+						<div id="box3"></div>
+						<div id="box4"></div>
+						<div id="box5"></div>
+						<div id="box6"></div>
+						<div id="box7"></div>
+						<div id="box8"></div>
+						<div id="box9"></div>
+					</div>
+					<h2 id="winMsg"></h2>
+					<button id="refreshBtn"> Refresh</button>
+				</div>
 		</section>
 	</main>
 </body>
